<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/img_group_avatar_container"

        style="@style/appChatAvatarContainerStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_group_avatar"
            style="@style/appChatAvatarStyle"
            android:contentDescription="@string/group_avatar_description"
            android:src="@drawable/group_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_voip_badge_container"
        style="@style/appChatVoipContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_group_avatar_container"
        app:layout_constraintEnd_toEndOf="@id/img_group_avatar_container">

        <ImageView
            android:id="@+id/img_voip_badge"
            style="@style/appChatVoipStyle"
            android:contentDescription="@string/voip_badge_description" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        style="@style/appChatAvaterGuideline" />

    <TextView
        android:id="@+id/txt_group_name"
        style="@style/appChatFirstLineStyle"
        android:text="@string/group_name"
        app:layout_constraintStart_toEndOf="@id/img_group_avatar_container"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_verified_icon"
        style="@style/appChatVerifiedIconStyle"
        android:contentDescription="@string/verified_icon_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/txt_group_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_mute_icon"
        style="@style/appChatMuteIconStyle"
        android:contentDescription="@string/mute_icon_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/img_verified_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_last_author"
        style="@style/appChatSecondLineStyle"
        android:text="@string/last_author"
        app:layout_constraintStart_toStartOf="@id/txt_group_name"
        app:layout_constraintTop_toBottomOf="@id/txt_group_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_message_preview_container"
        style="@style/appChatPreviewContainerStyle"
        android:layout_marginStart="0dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/txt_last_message"
        app:layout_constraintStart_toStartOf="@id/txt_last_author"
        app:layout_constraintTop_toBottomOf="@id/txt_last_author">

        <ImageView
            android:id="@+id/img_message_preview"
            style="@style/appChatPreviewStyle"
            android:contentDescription="@string/verified_icon_description" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_last_message"
        style="@style/appChatThirdLineStyle"
        android:text="@string/last_message"
        app:layout_constraintStart_toEndOf="@id/img_message_preview_container"
        app:layout_constraintTop_toBottomOf="@id/txt_last_author" />

    <TextView
        android:id="@+id/txt_time_value"
        style="@style/appChatServiceStyle"
        android:text="@string/time_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_checked_icon"
        style="@style/appChatCheckedIconStyle"
        android:contentDescription="@string/checked_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/txt_time_value"
        app:layout_constraintEnd_toStartOf="@id/txt_time_value"
        app:layout_constraintTop_toTopOf="@id/txt_time_value" />

    <ImageView
        android:id="@+id/img_read_icon"
        style="@style/appChatReadIconStyle"
        android:contentDescription="@string/read_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_checked_icon"
        app:layout_constraintEnd_toStartOf="@id/img_checked_icon"
        app:layout_constraintTop_toTopOf="@id/img_checked_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/counter_guideline"
        style="@style/appChatAvaterGuideline"
        app:layout_constraintGuide_end="8dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_counter_container"
        style="@style/appChatCounterContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/counter_guideline">

        <TextView
            android:id="@+id/txt_counter_container"
            style="@style/appChatCounterStyle" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_pinned_icon"
        style="@style/appChatPinnedIconStyle"
        android:contentDescription="@string/pinned_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_counter_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_mention_icon_container"
        style="@style/appChatMentionIconContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_pinned_icon">

        <ImageView
            android:id="@+id/img_mention_icon"
            style="@style/appChatMentionIconStyle"
            android:contentDescription="@string/mention_icon_description" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>