<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/img_person_avatar_container"
        style="@style/appChatAvatarContainerStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_person_avatar"
            style="@style/appChatAvatarStyle"
            android:contentDescription="@string/person_avatar_description"
            android:scaleType="centerCrop"
            android:src="@drawable/person_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_checkbox_badge_container"
        style="@style/appChatCheckboxContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_person_avatar_container"
        app:layout_constraintEnd_toEndOf="@id/img_person_avatar_container">

        <ImageView
            android:id="@+id/img_checkbox_badge"
            style="@style/appChatCheckboxStyle"
            android:contentDescription="@string/checkbox_badge_description" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_online_badge_container"
        style="@style/appChatOnlineContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_person_avatar_container"
        app:layout_constraintEnd_toEndOf="@id/img_person_avatar_container">

        <ImageView
            android:id="@+id/img_online_badge"
            style="@style/appChatOnlineStyle"
            android:contentDescription="@string/checkbox_badge_description" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/avatar_guideline"
        style="@style/appChatAvaterGuideline"
        app:layout_constraintGuide_begin="80dp" />

    <ImageView
        android:id="@+id/img_locked_icon"
        style="@style/appChatLockedIconStyle"
        android:contentDescription="@string/locked_icon_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/avatar_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_person_name"
        style="@style/appChatPersonNameStyle"
        android:text="@string/person_name"
        app:layout_constraintStart_toEndOf="@id/img_locked_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_scam_patch"
        style="@style/appChatScamPatchStyle"
        android:contentDescription="@string/scam_patch_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/txt_person_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_verified_icon"
        style="@style/appChatVerifiedIconStyle"
        android:contentDescription="@string/verified_icon_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/img_scam_patch"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_mute_icon"
        style="@style/appChatMuteIconStyle"
        android:contentDescription="@string/mute_icon_description"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/img_verified_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_message_preview_container"
        style="@style/appChatPreviewContainerStyle"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/txt_last_message"
        app:layout_constraintStart_toEndOf="@id/avatar_guideline"
        app:layout_constraintTop_toBottomOf="@id/txt_person_name">

        <ImageView
            android:id="@+id/img_message_preview"
            style="@style/appChatPreviewStyle"
            android:contentDescription="@string/verified_icon_description" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_last_message"
        style="@style/appChatThirdLineStyle"
        android:text="@string/last_message"
        app:layout_constraintStart_toEndOf="@id/img_message_preview_container"
        app:layout_constraintTop_toBottomOf="@id/txt_person_name" />

    <TextView
        android:id="@+id/txt_time_value"
        style="@style/appChatServiceStyle"
        android:text="@string/time_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_checked_icon"
        style="@style/appChatCheckedIconStyle"
        android:contentDescription="@string/checked_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/txt_time_value"
        app:layout_constraintEnd_toStartOf="@id/txt_time_value"
        app:layout_constraintTop_toTopOf="@id/txt_time_value" />

    <ImageView
        android:id="@+id/img_read_icon"
        style="@style/appChatReadIconStyle"
        android:contentDescription="@string/read_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/img_checked_icon"
        app:layout_constraintEnd_toStartOf="@id/img_checked_icon"
        app:layout_constraintTop_toTopOf="@id/img_checked_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/counter_guideline"
        style="@style/appChatAvaterGuideline"
        app:layout_constraintGuide_end="8dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_counter_container"
        style="@style/appChatCounterContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/counter_guideline">

        <TextView
            android:id="@+id/txt_counter_container"
            style="@style/appChatCounterStyle" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_pinned_icon"
        style="@style/appChatPinnedIconStyle"
        android:contentDescription="@string/pinned_icon_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_counter_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img_mention_icon_container"
        style="@style/appChatMentionIconContainerStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_pinned_icon">

        <ImageView
            android:id="@+id/img_mention_icon"
            style="@style/appChatMentionIconStyle"
            android:contentDescription="@string/mention_icon_description" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>